--- a/CV_employés.ipynb
+++ b/CV_employés.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/hassineimen/gestionCV/blob/main/CV_employ%C3%A9s.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "## 1/ Analyse de la base de données."
       ],
@@ -36,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "bKnPYwIBVPME"
       },
@@ -63,7 +52,7 @@
         "id": "SpNmeC_GhBDC",
         "outputId": "715f7c28-b1ee-4b9d-ff04-b3eea454cf23"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +75,7 @@
         "id": "-t40t2NzW8Q5",
         "outputId": "98f8b581-7b41-49df-9a1a-fa15aef541a0"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +124,7 @@
         "id": "w_WAD7eBXCic",
         "outputId": "9f296e1a-56a7-48e9-b2c4-43a174c5a437"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +152,7 @@
         "id": "Unps6oy3XzC0",
         "outputId": "7b56d865-e98d-4403-cc41-2cf198e85d8a"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +192,7 @@
         "id": "xY_LXl-cYDvX",
         "outputId": "85f0f44c-3baa-4ce1-e6c4-252a3b24548f"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +235,7 @@
         "id": "Zs1oMgZVZ7Mh",
         "outputId": "65188396-4e01-49cc-aea7-c78b6c5027ee"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +275,7 @@
         "id": "tPfUeZ4RdSZc",
         "outputId": "87127a33-2427-44ba-c841-84a890fbfc78"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -313,7 +302,7 @@
         "id": "Zk9YulTuddvc",
         "outputId": "20a58987-2634-474e-b829-80eff3f5f9eb"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +343,7 @@
         "id": "SR6k5tJSiZP8",
         "outputId": "00c90180-d8af-4cb9-8d94-ef2db05848e8"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,7 +368,7 @@
         "id": "n76wabtWobRg",
         "outputId": "b76f02f4-276d-4ca7-d85d-039a97715a4c"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -785,7 +774,7 @@
         "id": "GW4e0vHmogG-",
         "outputId": "b1f1a5d7-f2ab-44fd-81d8-85a0975aaf00"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -810,7 +799,7 @@
         "id": "x65ZF15bpsNH",
         "outputId": "2516ff20-7b27-47ec-d433-5289c5e1b10a"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1222,7 +1211,7 @@
         "id": "BhqTW8-Qp2Y2",
         "outputId": "701849f3-315c-40c7-bcfd-267b2f3215e7"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1249,7 +1238,7 @@
         "id": "Chboy3-JqU3F",
         "outputId": "06fa6bc4-fec5-4a6d-f7ae-e884586d3a92"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1668,7 +1657,7 @@
         "id": "VTbn4Tt_q6E4",
         "outputId": "fa9ba038-a34a-46ac-d701-2b34c29a2ea2"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1792,7 +1781,7 @@
         "id": "OA5ynOodrgeO",
         "outputId": "cfe72b27-9022-4d9a-cb40-6beabec378b7"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2226,7 +2215,7 @@
         "id": "tPsXZi1Jvhiv",
         "outputId": "22b4c4b6-b86d-4995-d3c1-f4090d2f6dec"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -2278,7 +2267,7 @@
         "id": "MiNCDhjNwdJm",
         "outputId": "b41bdb55-b438-44ee-8ec5-7cfc38b4d6ff"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -2333,7 +2322,7 @@
         "id": "XBKAL7JH42a1",
         "outputId": "8c7d00fc-92f6-456b-af1a-2fa9cee2f1b1"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -2341,6 +2330,56 @@
           "text": [
             "Some weights of XLNetForSequenceClassification were not initialized from the model checkpoint at xlnet-base-cased and are newly initialized: ['logits_proj.bias', 'logits_proj.weight', 'sequence_summary.summary.bias', 'sequence_summary.summary.weight']\n",
             "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Entraîner le modèle\n",
+        "epochs = 3\n",
+        "for epoch in range(epochs):\n",
+        "    model.train()\n",
+        "    optimizer.zero_grad()\n",
+        "    outputs = model(train_inputs, labels=train_labels)\n",
+        "    loss = outputs.loss\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "    print(f\"Epoch {epoch+1}/{epochs} - Loss: {loss.item()}\")\n",
+        "\n",
+        "# Faire des prédictions sur les données de test\n",
+        "model.eval()\n",
+        "with torch.no_grad():\n",
+        "    outputs = model(test_inputs)\n",
+        "    preds = torch.argmax(outputs.logits, dim=1)\n",
+        "\n",
+        "# Calculer la précision et afficher le rapport de classification\n",
+        "accuracy = accuracy_score(y_test, preds)\n",
+        "print(f\"Accuracy: {accuracy}\")\n",
+        "print(classification_report(y_test, preds, target_names=['gestion', 'marketing', 'développement']))\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "id": "loV7DF1o_0XD",
+        "outputId": "34ab0792-cb38-48da-9070-908d4bcb7134"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-962629611305>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mepochs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_inputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
           ]
         }
       ]
